--- a/docs/immersive-twins/index.org
+++ b/docs/immersive-twins/index.org
@@ -148,8 +148,11 @@ Extra:
     - Bind WoT to XR
     - Control WebThings using A-Frame
 * Robot and its "twin"
- 
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4"></video>@@
+
+@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+
+[[https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4][📺]]
+[[https://youtu.be/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr][📺]]
 
 * Mozilla WebThings
 :PROPERTIES:
@@ -164,7 +167,12 @@ Extra:
     - for new protocols or services
   - Simplified W3C WoT Description (in JSON)
 * Different perspectives
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/453f14cf-1c61-4803-b8e2-2a404dfa1d16-720.mp4" loop="true"></video>@@
+
+@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/s3r8pQtzhAU#wotxr-20190320rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+[[https://youtu.be/s3r8pQtzhAU#wotxr-20190320rzr][.]]
+[[https://peertube.mastodon.host/videos/embed/453f14cf-1c61-4803-b8e2-2a404dfa1d16#wotxr-20190320rzr][.]]
+
 * From Reality to XR:
 :PROPERTIES:
 :reveal_background: https://repository-images.githubusercontent.com/171703701/184b5900-48f5-11ea-9333-ac4d2bc66db4#./file/color-sensor-js.gif
@@ -180,19 +188,22 @@ Extra:
   - WebXR application listen to webthing changes
     - update "twin" node accordingly
   - FLOSS: https://purl.org/aframe-webthing
+
 * Light example
 
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/058df607-2ca9-4a2c-be42-286644e5071e-1080.mp4"></video>@@
+@@html:<iframe src="https://player.vimeo.com/video/430835059" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>@@
 
-[[https://peertube.mastodon.host/videos/watch/058df607-2ca9-4a2c-be42-286644e5071e#awox-mesh-light-webthing-202005260-rzr#][.]]
+[[https://peertube.mastodon.host/videos/watch/058df607-2ca9-4a2c-be42-286644e5071e#awox-mesh-light-webthing-202005260-rzr#][📺]]
+[[https://youtu.be/ASmV2mY-yXk#awox-mesh-light-webthing-202005260-rzr][📺]]
+[[https://vimeo.com/430835059#awox-mesh-light-webthing-202005260-rzr][📺]]
 
 * Mozilla's VR hubs
 
-@@html:<video controls src="https://diode.zone/download/videos/fed3ff6c-c385-438f-bd88-1f30433c7c29-1080.mp4#./web-of-twins-hubs-ow2con-2020-rzr-1080.mp4"/>@@
+@@html:<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" src="https://diode.zone/videos/embed/fed3ff6c-c385-438f-bd88-1f30433c7c29" frameborder="0" allowfullscreen></iframe>@@
 
-[[https://youtu.be/HPe8eZXkqf4#web-of-twins-hubs-ow2con-2020-rzr][.]]
-[[https://diode.zone/videos/watch/fed3ff6c-c385-438f-bd88-1f30433c7c29#./web-of-twins-hubs-ow2con-2020-rzr][.]]
-[[https://peertube.mastodon.host/videos/watch/b176229a-a34f-4da1-9caa-360c7a75c788#./web-of-twins-hubs-ow2con-2020-rzr][.]]
+[[https://youtu.be/HPe8eZXkqf4#web-of-twins-hubs-ow2con-2020-rzr][📺]]
+[[https://diode.zone/videos/watch/fed3ff6c-c385-438f-bd88-1f30433c7c29#./web-of-twins-hubs-ow2con-2020-rzr][📺]]
+[[https://peertube.mastodon.host/videos/watch/b176229a-a34f-4da1-9caa-360c7a75c788#./web-of-twins-hubs-ow2con-2020-rzr][📺]]
 
 * Resources
   :PROPERTIES:
@@ -223,8 +234,24 @@ Extra:
 
 @@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/pGZbHdiTalQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
-[[https://peertube.mastodon.host/videos/watch/1d7de472-9e72-4bd2-8727-1882f247eca0][.]]
-[[https://www.youtube.com/watch?v=pGZbHdiTalQ&list=UUgGWtPbelycq8xjbaI1alZg&index=1#web-of-twins-fosdem-2020-rzr#][.]]
+[[https://peertube.mastodon.host/videos/watch/1d7de472-9e72-4bd2-8727-1882f247eca0][📺]]
+[[https://www.youtube.com/watch?v=pGZbHdiTalQ&list=UUgGWtPbelycq8xjbaI1alZg&index=1#web-of-twins-fosdem-2020-rzr#][📺]]
 
 * Video playback
   @@html:<video controls src="https://conf.tube/download/videos/fcbd94ee-eecd-458c-b33b-dcb0232adf21-1080.mp4"></video>@@
+* More
+  - https://purl.org/rzr/
+  - https://purl.org/rzr/presentations
+  - https://purl.org/rzr/demo
+  - https://purl.org/rzr/weboftwins
+  - https://purl.org/rzr/social
+  - https://purl.org/rzr/video
+
+* Playlist
+
+@@html:<iframe src="https://purl.org/rzr/youtube#:TODO:2020:" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>@@
+
+[[https://peertube.debian.social/accounts/rzr_guest#][📺]]
+[[https://diode.zone/video-channels/www.rzr.online.fr#][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
