--- a/docs/iot-robot/index.org
+++ b/docs/iot-robot/index.org
@@ -199,14 +199,18 @@ $ curl -H "Content-Type: application/json" \
 * Web of Twins Robot
 
 
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/1d7de472-9e72-4bd2-8727-1882f247eca0-720.mp4" loop="true"></video>@@
+@@html:<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" src="https://diode.zone/videos/embed/3f1a5ceb-8f67-42fd-87a2-3cbf52b8f4ec" frameborder="0" allowfullscreen></iframe>@@
 
-[[https://diode.zone/videos/watch/3f1a5ceb-8f67-42fd-87a2-3cbf52b8f4ec#web-of-twins-fosdem-2020-rzr][.]]
-[[https://peertube.mastodon.host/videos/watch/1d7de472-9e72-4bd2-8727-1882f247eca0][.]]
+[[https://youtu.be/pGZbHdiTalQ#web-of-twins-fosdem-2020-rzr][📺]]
+[[https://diode.zone/videos/watch/3f1a5ceb-8f67-42fd-87a2-3cbf52b8f4ec#web-of-twins-fosdem-2020-rzr][📺]]
+[[https://peertube.mastodon.host/videos/watch/1d7de472-9e72-4bd2-8727-1882f247eca0][📺]]
 
 * Web of Twins demo
 
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4" autoplay="false" loop="false"></video>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/sUayRsjV1Ys" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+
+[[https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4][.]]
+[[https://youtu.be/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr][.]]
 
 * Resources
   :PROPERTIES:
@@ -231,5 +235,20 @@ $ curl -H "Content-Type: application/json" \
 #+ATTR_HTML: :width 50% :align middle
 [[https://opensourcedesign.net/images/events/fosdem.svg]]
 * Video playback
-  @@html:<video controls src="https://video.fosdem.org/2020/UD2.218A/iotnuttx.webm" autoplay="false" loop="false"></video>@@
+  @@html:<video controls src="https://video.fosdem.org/2020/UD2.218A/iotnuttx.webm" controls autoplay="false" loop="false" preload="none" />@@
 
+* More
+  - https://purl.org/rzr/
+  - https://purl.org/rzr/presentations
+  - https://purl.org/rzr/demo
+  - https://purl.org/rzr/weboftwins
+  - https://purl.org/rzr/social
+  - https://purl.org/rzr/video
+* Playlist
+
+@@html:<iframe src="https://purl.org/rzr/youtube#:TODO:2020:" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>@@
+
+[[https://peertube.debian.social/accounts/rzr_guest#][📺]]
+[[https://diode.zone/video-channels/www.rzr.online.fr#][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
