--- a/docs/digital-twin/index.org
+++ b/docs/digital-twin/index.org
@@ -142,11 +142,15 @@ https://main.ow2.org/download/FlamingoThemes/WhiteOW2/OW2_Logo_Evolution_FullCol
     - eg: "compass" angle (number)
   - Bind properties from IoT to XR using:
     - https://purl.org/aframe-webthing
+
 * Mozilla's VR hubs
 
-@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/HPe8eZXkqf4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+@@html:<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" src="https://diode.zone/videos/embed/fed3ff6c-c385-438f-bd88-1f30433c7c29" frameborder="0" allowfullscreen></iframe>@@
 
-[[https://youtu.be/HPe8eZXkqf4#web-of-twins-hubs-ow2con-2020-rzr][.]]
+[[https://youtu.be/HPe8eZXkqf4#web-of-twins-hubs-ow2con-2020-rzr][📺]]
+[[https://diode.zone/videos/watch/fed3ff6c-c385-438f-bd88-1f30433c7c29#web-of-twins-hubs-ow2con-2020-rzr:2020:][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
 
 * Getting started
 :PROPERTIES:
@@ -217,16 +221,44 @@ from devices to VR/XR user interface.
   :reveal_background_opacity: 0.05
   :END:
 
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/453f14cf-1c61-4803-b8e2-2a404dfa1d16-720.mp4"></video>@@
+@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/s3r8pQtzhAU#wotxr-20190320rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+[[https://youtu.be/s3r8pQtzhAU#wotxr-20190320rzr][.]]
+[[https://peertube.mastodon.host/videos/embed/453f14cf-1c61-4803-b8e2-2a404dfa1d16#wotxr-20190320rzr][.]]
 
 * Immersive web
   :PROPERTIES:
   :reveal_background: https://repository-images.githubusercontent.com/196152087/db02dc80-6a05-11ea-9df4-5c39270bf6bc
   :reveal_background_opacity: 0.05
   :END:
-  
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4"></video>@@
+
+@@html:<iframe width="560" height="315" src="https://www.youtube.com/embed/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+
+[[https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4][📺]]
+[[https://youtu.be/sUayRsjV1Ys#digitaltwins-webthings-iotjs-20190512rzr][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
 
 * Video playback
   @@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ZonOhjjuyD4?start=19453&list=PLW_oRrdNdnFksZZtlEc0Vqlw2wY_9TIE7&#weboftwins-ow2-2020#" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
-  [[https://mastodon.social/@rzr/104365127535860733#weboftwins-ow2-2020#][.]]
+
+[[https://mastodon.social/@rzr/104365127535860733#weboftwins-ow2-2020#][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
+
+* More
+  - https://purl.org/rzr/
+  - https://purl.org/rzr/presentations
+  - https://purl.org/rzr/demo
+  - https://purl.org/rzr/weboftwins
+  - https://purl.org/rzr/social
+  - https://purl.org/rzr/video
+
+* Playlist
+
+@@html:<iframe src="https://purl.org/rzr/youtube#:TODO:2020:" width="640" height="360" frameborder="0" allow="fullscreen" allowfullscreen></iframe>@@
+
+[[https://peertube.debian.social/accounts/rzr_guest#][📺]]
+[[https://diode.zone/video-channels/www.rzr.online.fr#][📺]]
+[[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
+[[http://purl.org/rzr/videos][📺]]
